--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -61,4 +61,11 @@
     <style name="TextIcon" parent="TextView.Secondary">
         <item name="fontFamily">@font/font_awesome</item>
     </style>
+    
+    <style name="HalfWidth">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+
+    </style>
 </resources>
