--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,84 +3,83 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="8dp"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/UserImageView"
+        android:id="@+id/userImageView"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@tools:sample/avatars"/>
 
     <TextView
-        android:id="@+id/UserNameTextView"
-        android:layout_below="@+id/UserImageView"
+        android:id="@+id/userNameTextView"
+        android:layout_below="@+id/userImageView"
         style="@style/TextView.Primary.Header"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="Имя" />
 
     <TextView
-        android:id="@+id/UserNickTextView"
-        android:layout_below="@+id/UserNameTextView"
+        android:id="@+id/userNickTextView"
+        android:layout_below="@+id/userNameTextView"
         style="@style/TextView.Secondary"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="Ник" />
 
     <TextView
-        android:id="@+id/UserDescriptionTextView"
-        android:layout_below="@+id/UserNickTextView"
+        android:id="@+id/userDescriptionTextView"
+        android:layout_below="@+id/userNickTextView"
         style="@style/TextView.Primary"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="Описание" />
 
     <TextView
-        android:id="@+id/UserLocationIconTextView"
-        android:layout_below="@+id/UserDescriptionTextView"
-        android:layout_alignBaseline="@+id/UserLocationTextView"
+        android:id="@+id/userLocationIconTextView"
+        android:layout_below="@+id/userDescriptionTextView"
+        android:layout_alignBaseline="@+id/userLocationTextView"
         style="@style/TextIcon"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="@string/fa_map_marker" />
 
     <TextView
-        android:id="@+id/UserLocationTextView"
-        android:layout_toEndOf="@id/UserLocationIconTextView"
+        android:id="@+id/userLocationTextView"
+        android:layout_toEndOf="@id/userLocationIconTextView"
         android:layout_marginStart="10dp"
-        android:layout_below="@+id/UserDescriptionTextView"
+        android:layout_below="@+id/userDescriptionTextView"
         style="@style/TextView.Secondary"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="Местоположение" />
 
     <TextView
-        android:id="@+id/UserFollowingCountTextView"
-        android:layout_below="@+id/UserLocationTextView"
+        android:id="@+id/userFollowingCountTextView"
+        android:layout_below="@+id/userLocationTextView"
         style="@style/TextView.Primary.Bold"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="4" />
 
     <TextView
-        android:id="@+id/UserFollowingTextView"
-        android:layout_below="@+id/UserLocationTextView"
-        android:layout_toEndOf="@+id/UserFollowingCountTextView"
+        android:id="@+id/userFollowingTextView"
+        android:layout_below="@+id/userLocationTextView"
+        android:layout_toEndOf="@+id/userFollowingCountTextView"
         android:layout_marginStart="5dp"
         style="@style/TextView.Secondary"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="@string/following_hint" />
 
     <TextView
-        android:id="@+id/UserFollowersCountTextView"
-        android:layout_toEndOf="@+id/UserFollowingTextView"
-        android:layout_below="@+id/UserLocationTextView"
+        android:id="@+id/userFollowersCountTextView"
+        android:layout_toEndOf="@+id/userFollowingTextView"
+        android:layout_below="@+id/userLocationTextView"
         android:layout_marginStart="20dp"
         style="@style/TextView.Primary.Bold"
         android:layout_marginTop="@dimen/text_small_margin"
         android:text="4" />
 
     <TextView
-        android:id="@+id/UserFollowersTextView"
-        android:layout_toEndOf="@+id/UserFollowersCountTextView"
-        android:layout_below="@+id/UserLocationTextView"
+        android:id="@+id/userFollowersTextView"
+        android:layout_toEndOf="@+id/userFollowersCountTextView"
+        android:layout_below="@+id/userLocationTextView"
         android:layout_marginStart="5dp"
         style="@style/TextView.Secondary"
         android:layout_marginTop="@dimen/text_small_margin"
