--- a/app/src/main/res/layout/tweet_item_view.xml
+++ b/app/src/main/res/layout/tweet_item_view.xml
@@ -6,63 +6,62 @@
     android:padding="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profileImageView"
+        android:id="@+id/profile_image_view"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginEnd="@dimen/text_small_margin"
-        android:src="@mipmap/ic_launcher">
-    </de.hdodenhof.circleimageview.CircleImageView>
+        android:src="@mipmap/ic_launcher"/>
 
     <TextView
-        android:id="@+id/authorNameTextView"
+        android:id="@+id/author_name_text_view"
         style="@style/TextView.Primary.Bold"
-        android:layout_toEndOf="@id/profileImageView"
-        android:text="Devcolibri" />
+        android:layout_toEndOf="@id/profile_image_view"
+        android:text="Devcolibri"/>
 
     <TextView
-        android:id="@+id/authorNickTextView"
+        android:id="@+id/author_nick_text_view"
         style="@style/TextView.Secondary"
         android:layout_marginStart="@dimen/text_small_margin"
-        android:layout_toEndOf="@id/authorNameTextView"
-        android:text="devcolibri" />
+        android:layout_toEndOf="@+id/author_name_text_view"
+        android:text="devcolibri"/>
 
     <TextView
-        android:id="@+id/authorDateTextView"
+        android:id="@+id/creation_date_text_view"
         style="@style/TextView.Secondary"
         android:layout_marginStart="@dimen/text_small_margin"
-        android:layout_toEndOf="@id/authorNickTextView"
+        android:layout_toEndOf="@+id/author_nick_text_view"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="Нояб. 27" />
+        android:text="нояб. 27"/>
 
     <TextView
-        android:id="@+id/tweetContentTextView"
+        android:id="@+id/tweet_content_text_view"
         style="@style/TextView.Primary"
-        android:layout_below="@id/authorNameTextView"
+        android:layout_below="@id/author_name_text_view"
         android:layout_marginTop="@dimen/text_small_margin"
-        android:layout_toEndOf="@id/profileImageView"
-        android:text="Сегодня поговорим о RecyclerView и о том, почему нужно использовать именно его" />
+        android:layout_toEndOf="@id/profile_image_view"
+        android:text="Сегодня поговорим о RecyclerView и о том, почему нужно использовать именно его."/>
 
     <ImageView
-        android:id="@+id/tweetImageView"
+        android:id="@+id/tweet_image_view"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_below="@id/tweetContentTextView"
+        android:layout_below="@id/tweet_content_text_view"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:layout_toEndOf="@id/profileImageView"
+        android:layout_toEndOf="@id/profile_image_view"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_launcher">
-    </ImageView>
+        android:src="@mipmap/ic_launcher"/>
 
-    <LinearLayoutCompat
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tweetImageView"
-        android:layout_toEndOf="@id/profileImageView"
+        android:layout_below="@id/tweet_image_view"
+        android:layout_toEndOf="@id/profile_image_view"
         android:orientation="horizontal">
+
         <LinearLayout
-            android:id="@+id/retweetsContainer"
+            android:id="@+id/retweets_container"
             style="@style/HalfWidth"
             android:orientation="horizontal">
 
@@ -71,13 +70,15 @@
                 android:text="@string/fa_retweet"/>
 
             <TextView
-                android:id="@+id/retweetsTextView"
+                android:id="@+id/retweets_text_view"
                 style="@style/TextView.Secondary"
                 android:layout_marginStart="@dimen/text_small_margin"
                 android:text="16"/>
         </LinearLayout>
+
+
         <LinearLayout
-            android:id="@+id/likesContainer"
+            android:id="@+id/likes_container"
             style="@style/HalfWidth"
             android:orientation="horizontal">
 
@@ -86,11 +87,12 @@
                 android:text="@string/fa_heart_o"/>
 
             <TextView
-                android:id="@+id/likesTextView"
+                android:id="@+id/likes_text_view"
                 style="@style/TextView.Secondary"
                 android:layout_marginStart="@dimen/text_small_margin"
                 android:text="16"/>
         </LinearLayout>
-    </LinearLayoutCompat>
+
+    </LinearLayout>
 
 </RelativeLayout>
