--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -14,7 +14,7 @@
             android:id="@+id/user_image_view"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            android:src="@drawable/flash"/>
+            android:src="@mipmap/ic_launcher"/>
 
         <TextView
             android:id="@+id/user_name_text_view"
